# html-builder

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/html-builder/: Cargo.toml
crates/html-builder/src/: lib.rs
crates/html-builder/tests/: macro_tests.rs
crates/html-macro/: Cargo.toml
crates/html-macro/src/: lib.rs
crates/html-parser/: Cargo.toml
crates/html-parser/src/: dom.rs  lib.rs  tokenizer.rs  tree_builder.rs  validator.rs
