[package]
name = "html-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macro for type-safe HTML construction"
keywords = ["html", "macro", "proc-macro", "type-safe"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
html-builder.workspace = true
html-elements.workspace = true
